[package]
name = "zallocator"
version = "0.1.1"
authors = ["Al Liu <scygliu1@gmail.com>"]
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/al8n/zallocator"
documentation = "https://docs.rs/zallocator"
description = "Amortizes the cost of small allocations by allocating memory in bigger chunks."
keywords = ["allocator", "memory"]
categories = ["data-structures", "no-std", "concurrency"]

[workspace]
members = [".", "integration"]

[[bench]]
name = "allocator"
path = "benches/bench.rs"
harness = false

[features]
default = ["std"]
full = ["std", "async-pool", "pool"]
std = ["rand/std", "rand/std_rng", "lazy_static", "parking_lot", "hashbrown"]
core = ["lazy_static/spin_no_std", "spin", "rand/alloc", "hashbrown"]
js = ["getrandom/js"]
inline-more = ["hashbrown/inline-more"]
async-pool = ["pollster", "futures/default", "async-channel", "async-io"]
pool = ["crossbeam-channel"]



[dependencies]
futures = { version = "0.3", optional = true }
lazy_static = { version = "1.4", optional = true, default-features = false }
hashbrown = { version = "0.12", optional = true }
pollster = { version = "0.2", optional = true }
parking_lot = { version = "0.12", optional = true }
rand = { version = "0.8", optional = true, default-features = false }
getrandom = { version = "0.2", optional = true }
spin = { version = "0.9", optional = true }
crossbeam-channel = { version = "0.5", optional = true }
async-channel = { version = "1.7", optional = true }
async-io = { version = "1.8", optional = true }

[dev-dependencies]
tokio = { version = "1.19", features = ["full"] }
tokio-test = "0.4"
futures = "0.3"
criterion = "0.3"
rand = "0.8"

[target.'cfg(loom)'.dev-dependencies]
loom = "0.5"

[target.'cfg(wasm)'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]